--- a/package.json
+++ b/package.json
@@ -1,15 +1,35 @@
 {
-  "name": "discord-bot",
+  "name": "github-workflow-bot",
   "version": "1.0.0",
-  "description": "Discord bot for SitePoint",
-  "main": "index.js",
+  "description": "Discord bot triggering GitHub worflow events",
+  "main": "build/server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "tsc --project tsconfig.json",
+    "start": "yarn build && ts-node build/server.js",
+    "dev": "nodemon"
   },
-  "author": "Michiel Mulders",
-  "license": "ISC",
+  "author": "Matthias Wanner",
+  "license": "MIT",
   "dependencies": {
-    "discord.js": "^11.5.1",
-    "dotenv": "^8.2.0"
+    "discord-interactions": "^3.2.0",
+    "discord.js": "^13.8.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/node": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.28.0",
+    "@typescript-eslint/parser": "^5.28.0",
+    "discord-api-types": "^0.34.0",
+    "eslint": "^8.17.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-unicorn": "^42.0.0",
+    "i": "^0.3.7",
+    "nodemon": "^2.0.16",
+    "npm": "^8.12.2",
+    "prettier": "^2.7.1",
+    "ts-node": "^10.8.1",
+    "typescript": "^4.7.3"
   }
 }
