--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "discord-interactions": "^3.2.0",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1"
+    "express": "^4.18.1",
+    "node-fetch": "^3.2.6"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
