--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   "author": "Matthias Wanner",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.27.2",
     "discord-interactions": "^3.2.0",
     "discord.js": "^13.8.0",
     "dotenv": "^16.0.1",
-    "express": "^4.18.1",
-    "node-fetch": "^3.2.6"
+    "express": "^4.18.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
