--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "build": "tsc --project tsconfig.json",
     "start": "yarn build && ts-node build/server.js",
-    "dev": "nodemon"
+    "dev": "nodemon",
+    "docker:build": "docker build --no-cache -t github-workflow-bot ."
   },
   "author": "Matthias Wanner",
   "license": "MIT",
@@ -26,9 +27,7 @@
     "eslint": "^8.17.0",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-unicorn": "^42.0.0",
-    "i": "^0.3.7",
     "nodemon": "^2.0.16",
-    "npm": "^8.12.2",
     "prettier": "^2.7.1",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.3"
