:building_construction: (build) exclude .example files in compiled files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,5 +15,5 @@
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true
   },
-  "exclude": ["build", "node_modules", "tests"]
+  "exclude": ["build", "node_modules", "tests", "*/**/*.example.*"]
 }
